--- a/static/services_EN.html
+++ b/static/services_EN.html
@@ -48,6 +48,10 @@
         to express even though the Chinese content he provided was abstract. He
         wants to learn from you. Thank you very much.”</p>
       <p>- Parent of J Dou (2019 College applicant)</p>
+      <br>
+      <h2>Price: $1999</h2>
+      <p>One admission essay (Personal Statement or Statement of Purpose) with 500-700 words.</p>
+      <br>
 
     </div>
     <a class="button" href="faq_EN.html"><b>FAQ</b></a>
